--- a/_posts/2014-07-11-RunLoop简介.md
+++ b/_posts/2014-07-11-RunLoop简介.md
@@ -130,7 +130,7 @@ If no input sources or timers are attached to the run loop, this method exits im
 ```
 这里很明显的看到onTimer没有被调用。
 
-按照run函数的文档，调用run是将runloop以NSDefaultRunLoopMode模式运行，而我们这里将timer加入的是@"someMode"，runloop在NSDefaultRunLoopMode模式下不会处理其他模式下的事件。为了证实这一点，我们将runloop运行到@"someMode"看看结果。
+按照run函数的文档，调用run是将runloop以`NSDefaultRunLoopMode`模式运行，而我们这里将timer加入的是@"someMode"，runloop在`NSDefaultRunLoopMode`模式下不会处理其他模式下的事件。为了证实这一点，我们将runloop运行到@"someMode"看看结果。
 
 ```
 [[NSRunLoop currentRunLoop] runMode:@"someMode" beforeDate:[NSDate distantFuture]];
@@ -140,7 +140,7 @@ If no input sources or timers are attached to the run loop, this method exits im
 ```
 证实了上面的结论。
 
-系统定义的模式，除了NSDefaultRunLoopMode，还有其他模式么。
+系统定义的模式，除了`NSDefaultRunLoopMode`，还有其他模式么。
 
 在头文件里找到了NSRunLoopCommonModes，这个又是什么模式呢。
 
@@ -149,13 +149,14 @@ This is a configurable group of commonly used modes. Associating an input source
 来源：
 https://developer.apple.com/library/mac/documentation/Cocoa/Conceptual/Multithreading/RunLoopManagement/RunLoopManagement.html#//apple_ref/doc/uid/10000057i-CH16-SW1
 ```
-简单来说NSRunLoopCommonModes是一个mode合集，在Cocoa应用程序中包含 default, modal,  event tracking 三种模式，关于这几种模式的说明，参见来源网页。
-如果一个input source是加入到NSRunLoopCommonModes的话，那么在上面三种模式都会被触发。
+简单来说`NSRunLoopCommonModes`是一个mode合集，在Cocoa应用程序中包含 default, modal,  event tracking 三种模式，关于这几种模式的说明，参见来源网页。
+如果一个input source是加入到`NSRunLoopCommonModes`的话，那么在上面三种模式都会被触发。
 runloop可以这样么:
+
 ```
 [[NSRunLoop currentRunLoop] runMode:NSRunLoopCommonModes beforeDate:[NSDate distantFuture]];
 ```
-答案是不行，runloop只能在一种模式下运行，而NSRunLoopCommonModes不是一种模式，是一组模式。
+答案是不行，runloop只能在一种模式下运行，而`NSRunLoopCommonModes`不是一种模式，是一组模式。
 比如说你是runloop，你女朋友是input source，你女朋友可以叫你在家的，在公司，在路上都要给她打电话，而你本身不能同时又在家，又在公司，又在路上。
 
 文章够长了，下回再说。
